# cpatk

./: CPATK_v0_2_29_synthetic_latent_benchmark_release_notes.md  README.md  pyproject.toml  run_cpatk_v0_2_30_synthetic_latent_benchmark.sh  run_cpatk_v0_2_31_comprehensive_synthetic_latent_validation.sh  run_cpatk_v0_2_32_comprehensive_synthetic_latent_validation.sh  run_malaria_cpatk_v0_2_15_fast_tmp_parquet.sh  run_malaria_cpatk_v0_2_32_fast_tmp_parquet.sh  run_mitotox_cpatk_v0_2_32_fast_tmp_parquet.sh
cpatk/: __init__.py  ai.py  batch.py  clipn_adapter.py  clustering.py  contrastive.py  distances.py  embedding.py  explainability.py  features.py  inspection.py  io.py  layout.py  logging_utils.py  merging.py  metadata.py  metadata_validation.py  method_guidance.py  ml.py  moa.py  moa_advanced.py  neighbour_analysis.py  neighbourhood_explain.py  plotting.py  preprocessing.py  profile_combining.py  qc.py  qc_drift.py  reporting.py  reproducibility.py  strategy_selection.py  synthetic_latent.py  threading_utils.py  visualisation.py
docs/: CPATK_CLIPN_GUIDE.md  CPATK_CLUSTER_ENVIRONMENT_TROUBLESHOOTING.md  CPATK_CONFIRMED_CLUSTER_INSTALLATION_GUIDE.md  CPATK_CORRELATION_FILTER_GUIDE.md  CPATK_METADATA_AND_ANNOTATION_GUIDE.md  CPATK_METHOD_SELECTION_GUIDE.md  CPATK_MULTI_PLATE_NORMALISATION_AND_BATCH_GUIDE.md  CPATK_NEXT_CODE_PASS_RECOMMENDATIONS.md  CPATK_PHENOTYPE_LABELLED_MOA_GUIDE.md  CPATK_REPLICATE_QC_GUIDE.md  CPATK_USER_GUIDE.md  CPATK_design_notes.md  CPATK_preprocessing_rationale_v0_2_1.md  CPATK_preprocessing_rationale_v0_2_2.md  CPATK_v0_2_10_release_hardening.md  CPATK_v0_2_12_multi_plate_batch_release.md  CPATK_v0_2_18_review_hardening.md  CPATK_v0_2_23_protected_features_and_clipn_training.md  CPATK_v0_2_25_combined_profile_key_hardening.md  CPATK_v0_2_26_native_contrastive_release_notes.md  CPATK_v0_2_27_sanity_threading_release_notes.md  CPATK_v0_2_2_critical_evaluation.md  CPATK_v0_2_3_profile_building_and_preprocessing.md  CPATK_v0_2_4_critical_evaluation.md  CPATK_v0_2_5_merge_first_preprocessing_audit.md  CPATK_v0_2_6_SHAP_and_neighbourhood_explanation_audit.md  CPATK_v0_2_7_CLIPn_adapter_audit.md  CPATK_v0_2_8_MOA_critical_evaluation.md  CPATK_v0_2_9_QC_visualisation_and_full_workflow.md  CPATK_v0_2_methods_notes.md
examples/: METADATA_REQUIREMENTS.md  check_cpatk_cluster_environment.sh  collect_cpatk_review_bundle_v0_2_21.sh  collect_cpatk_review_bundle_v0_2_22.sh  collect_cpatk_review_bundle_v0_2_23.sh  create_cpatk_confirmed_cluster_env.sh  example_metadata.tsv  multi_plate_metadata_template.tsv  rerun_cpatk_v0_2_25_multidataset_combine_from_existing_profiles.sh  run_cpatk_multi_plate_recommended_workflow.sh  run_cpatk_v0_2_26_multidataset_stb_selleck_mitotox_full_sge.sh  run_cpatk_v0_2_27_multidataset_stb_selleck_mitotox_full_sge.sh  run_full_cpatk_pipeline.sh  run_malaria_cpatk_v0_2_14_full_test.sh  run_malaria_cpatk_v0_2_14_full_test_README.md  run_malaria_cpatk_v0_2_16_fast_tmp_parquet.sh  run_malaria_cpatk_v0_2_17_fast_tmp_parquet.sh  run_malaria_cpatk_v0_2_18_fast_tmp_parquet.sh  run_malaria_cpatk_v0_2_19_fast_tmp_parquet.sh  run_malaria_cpatk_v0_2_21_fast_tmp_parquet.sh  (+7 more)
tests/: test_cpatk_core.py  (+32 more)
(+32 files in other folders)
