[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpatk"
version = "0.2.32"
description = "Cell Painting Analysis Toolkit for generic high-content profiling, QC, classical analysis, optional AI integration, MOA classification and reporting."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Pete Thorpe and collaborators"}]
license = {text = "MIT"}
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
    "scikit-learn>=1.1",
    "matplotlib>=3.6",
    "openpyxl>=3.1",
    "jinja2>=3.1"
]

[project.optional-dependencies]
interactive = ["plotly>=5.0"]
umap = ["umap-learn>=0.5"]
parquet = ["pyarrow>=10.0"]
shap = ["shap>=0.41"]
all = ["plotly>=5.0", "umap-learn>=0.5", "pyarrow>=10.0", "shap>=0.41", "phate>=1.0"]

[project.scripts]
cpatk-inspect = "cpatk.cli.inspect:main"
cpatk-preprocess = "cpatk.cli.preprocess:main"
cpatk-build-profiles = "cpatk.cli.build_profiles:main"
cpatk-combine-profiles = "cpatk.cli.combine_profiles:main"
cpatk-classical = "cpatk.cli.classical:main"
cpatk-moa = "cpatk.cli.moa:main"
cpatk-report = "cpatk.cli.report:main"
cpatk-layout = "cpatk.cli.layout:main"
cpatk-stability = "cpatk.cli.stability:main"
cpatk-batch = "cpatk.cli.batch:main"
cpatk-ml = "cpatk.cli.ml:main"
cpatk-explain = "cpatk.cli.explain:main"
cpatk-clipn = "cpatk.cli.clipn:main"
cpatk-latent = "cpatk.cli.clipn:main"
cpatk-visualise = "cpatk.cli.visualise:main"
cpatk-drift-qc = "cpatk.cli.drift_qc:main"
cpatk-neighbours = "cpatk.cli.neighbours:main"
cpatk-metadata = "cpatk.cli.metadata:main"
cpatk-strategy-summary = "cpatk.cli.strategy_summary:main"
cpatk-synthetic-latent-benchmark = "cpatk.cli.synthetic_latent_benchmark:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cpatk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-data]
cpatk = ["resources/*.tsv", "resources/*.md"]
